syntax = "proto3";

option csharp_namespace = "WebPageArchive.GrpcProto";

package pagedownload;

message DownloadRequest {
  string url = 1;
  optional string wait_script = 2;
  optional int32 wait_timeout_ms = 3;
}

message DownloadResponse {
  string original_url = 1;
  bytes zip_archive = 2;
}

service PageDownloader {
  rpc DownloadPage (DownloadRequest) returns (DownloadResponse);
}